After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 674219 - gpdpay regression
gpdpay regression
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
0.11.x
Other Linux
: Normal normal
: 0.11.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-04-16 19:44 UTC by Nicola
Modified: 2012-04-20 11:36 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Nicola 2012-04-16 19:44:58 UTC
pipeline such this:

gst-launch videotestsrc ! matroskamux ! gdppay ! fakesink

works fine in 0.10 but not in 0.11
Comment 1 Wim Taymans 2012-04-20 11:36:14 UTC
commit fcfe6d9e284733c56c6b474f6acd70e56df82fc9
Author: Wim Taymans <wim.taymans@collabora.co.uk>
Date:   Fri Apr 20 13:35:15 2012 +0200

    matroskamux: set caps on srcpad
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=674219