matroskamux: set caps on srcpad

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=674219